--- a/.github/workflows/deploy_ui_review.yml
+++ b/.github/workflows/deploy_ui_review.yml
@@ -35,36 +35,12 @@ jobs:
         with:
           node-version: 22.14.0
           cache: "yarn"
-      # - name: Install Packages
-      #   run: yarn install --frozen-lockfile
-      # - name: Run Tests
-      #   run: yarn test
-      # - name: Run Linter
-      #   run: yarn lint
-      # - name: Workarround for build error
-      #   run: rm -rf node_modules/@tendermint
-      # - name: Run Build (ensure that build succeeds)
-      #   run: yarn build
-      # - name: Load Secrets
-      #   id: op-load-secret
-      #   uses: 1password/load-secrets-action@v1
-      #   with:
-      #     export-env: true
-      #   env:
-      #     OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-      #     CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-review-secrets/ci/CERAMIC_PRIVATE_KEY
-      # - name: Deploy Ceramic Models
-      #   working-directory: ./schemas
-      #   run: yarn models:deploy-composite
-      #   env:
-      #     CERAMIC_URL: http://localhost:7007
-      #     PRIVATE_KEY: ${{env.CERAMIC_PRIVATE_KEY}}
-      # - name: Run Ceramic Integration Tests
-      #   run: yarn test:ceramic-integration
-      #   env:
-      #     CERAMIC_CLIENT_URL: http://localhost:7007
-      #     IAM_JWK: '{"kty":"OKP","crv":"Ed25519","x":"a7wbszn1DfZ3I7-_zDkUXCgypcGxL_cpCSTYEPRYj_o","d":"Z0hucmxRt1C22ygAXJ1arXwD9QlAA5tEPLb7qoXYDGY"}'
-      #     IAM_JWK_EIP712: '{"kty":"EC","crv":"secp256k1","x":"PdB2nS-knyAxc6KPuxBr65vRpW-duAXwpeXlwGJ03eU","y":"MwoGZ08hF5uv-_UEC9BKsYdJVSbJNHcFhR1BZWer5RQ","d":"z9VrSNNZXf9ywUx3v_8cLDhSw8-pvAT9qu_WZmqqfWM"}'
+      - name: Install Packages
+        run: yarn install --frozen-lockfile --ignore-scripts
+      - name: Run Tests
+        run: yarn test
+      - name: Run Linter
+        run: yarn lint
 
   deploy-ui:
     # TODO (#106) - this job shall be deleted once deploy-ui-s3 is working
