--- a/.github/workflows/deploy_ui_review.yml
+++ b/.github/workflows/deploy_ui_review.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: 22.14.0
           cache: "yarn"
       - name: Install Packages
-        run: yarn install --frozen-lockfile --ignore-scripts
+        run: yarn install --frozen-lockfile
       - name: Run Tests
         run: yarn test
       - name: Run Linter
