--- a/.github/workflows/deploy_ui_generic.yml
+++ b/.github/workflows/deploy_ui_generic.yml
@@ -1,4 +1,5 @@
-name: Deploy UI to Review
+name: Deploy UI Generic
+run-name: Deploy UI to  - ${{ github.event.inputs.environment || 'review' }}
 
 on:
   push:
@@ -9,7 +10,15 @@ on:
         description: "Leave blank to use current HEAD, or provide an override commit SHA"
         type: string
         required: false
-
+      environment:
+        description: "Environment to deploy to"
+        required: true
+        default: "review"
+        type: choice
+        options:
+          - review
+          - staging
+          - production
 jobs:
   ref:
     name: Load Commit Ref
@@ -70,7 +79,7 @@ jobs:
     secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
-      environment: review
+      environment: ${{ inputs.environment }}
 
   push-ui:
     name: Push UI to Review (S3)
@@ -79,4 +88,4 @@ jobs:
     secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
-      environment: review
+      environment: ${{ inputs.environment }}
