feat: environment var is not required given it has default

--- a/.github/workflows/deploy_ui_generic.yml
+++ b/.github/workflows/deploy_ui_generic.yml
@@ -12,7 +12,7 @@ on:
         required: false
       environment:
         description: "Environment to deploy to"
-        required: true
+        required: false
         default: "review"
         type: choice
         options:
