--- a/.github/workflows/deploy_ui_generic.yml
+++ b/.github/workflows/deploy_ui_generic.yml
@@ -53,7 +53,7 @@ jobs:
 
   deploy-ui:
     # TODO (#106) - this job shall be deleted once deploy-ui-s3 is working
-    name: Deploy UI to Review - Push to Branch
+    name: Deploy UI - Push to Branch
     runs-on: ubuntu-latest
     needs: [ref, run-tests]
     permissions:
@@ -73,7 +73,7 @@ jobs:
           branch: review-app
 
   build-ui:
-    name: Build UI for Review
+    name: Build UI
     needs: [ref, run-tests]
     uses: ./.github/workflows/sync_to_s3_generic_build_app.yml
     secrets: inherit
@@ -82,7 +82,7 @@ jobs:
       environment: ${{ inputs.environment }}
 
   push-ui:
-    name: Push UI to Review (S3)
+    name: Push UI to S3
     needs: [build-ui]
     uses: ./.github/workflows/sync_to_s3_generic_push_app.yml
     secrets: inherit
