feat: renaming workflows

--- a/.github/workflows/sync_to_s3_generic_build_app.yml
+++ b/.github/workflows/sync_to_s3_generic_build_app.yml
@@ -1,4 +1,4 @@
-name: Setup & Build App
+name: Build App
 
 on:
   workflow_call:
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build:
-    name: Setup & Build App
+    name: Build App
     runs-on: ubuntu-latest
 
     env:
