--- a/.github/workflows/sync_to_s3_generic_build_embed.yml
+++ b/.github/workflows/sync_to_s3_generic_build_embed.yml
@@ -1,4 +1,4 @@
-name: Embed - Build
+name: Build Embed
 
 on:
   workflow_call:
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build:
-    name: Setup & Build App
+    name: Build Embed
     runs-on: ubuntu-latest
 
     env:
