--- a/.github/workflows/deploy_app_generic.yml
+++ b/.github/workflows/deploy_app_generic.yml
@@ -1,4 +1,4 @@
-name: Deploy UI Generic
+name: Deploy App Generic
 run-name: Deploy UI to  - ${{ github.event.inputs.environment || 'review' }}
 
 on:
