fix: add environment to build artifact name

--- a/.github/workflows/sync_to_s3_generic_build_app.yml
+++ b/.github/workflows/sync_to_s3_generic_build_app.yml
@@ -66,5 +66,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: passport-app
+          name: passport-app-${{ inputs.environment }}
           path: app/out
