--- a/.github/workflows/sync_to_s3_generic_build_embed.yml
+++ b/.github/workflows/sync_to_s3_generic_build_embed.yml
@@ -67,5 +67,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: passport-embed-popup
+          name: passport-embed-popup-${{ inputs.environment }}
           path: embed-popup/dist
