--- a/.github/workflows/sync_to_s3_generic_push_app.yml
+++ b/.github/workflows/sync_to_s3_generic_push_app.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: passport-app
+          name: passport-app-${{ inputs.environment }}
           path: app/out
 
       - name: Load secret
