--- a/.github/workflows/sync_to_s3_generic_push_embed.yml
+++ b/.github/workflows/sync_to_s3_generic_push_embed.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: passport-embed-popup
+          name: passport-embed-popup-${{ inputs.environment }}
           path: embed-popup/dist
 
       - name: Load secret
