fix: using environment input in deploy_ui_generic (#3383)
* fix: using environment input in deploy_ui_generic

* feat: update release workflow, load PULUMI_ACCESS_TOKEN from DeployerVault

* fix: delete non-existing refrenced workflows

* feat: split the workflow for embed into build and push, integrating in build_and_deploy_generic

* fix: removed reference to non-existing workflows from release_and_deploy

* feat: renaming workflows

* feat: dropped individual generic workflows for embed in favour of deploy_embed_generic.yml

* feat: read CLOUDFLARE_API_TOKEN from DeployerVault

* fix: no buld required in push workflow for embed-popup

* fix: add environment to build artifact name

* feat: embed workflow re-uses sync_to_s3 workflows

* fix: refspec input for pushing embed to s3

* feat: dropping embed.yml workflow, renaming workflows pushing to s3

--- a/.github/workflows/deploy_generic.yml
+++ b/.github/workflows/deploy_generic.yml
@@ -92,10 +92,10 @@ jobs:
         with:
           export-env: true
         env:
-          PULUMI_ACCESS_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/PULUMI_ACCESS_TOKEN
-          CLOUDFLARE_API_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/CLOUDFLARE_API_TOKEN
+          CLOUDFLARE_API_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/CLOUDFLARE_API_TOKEN
           AWS_ACCESS_KEY_ID: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SECRET_ACCESS_KEY
+          PULUMI_ACCESS_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/PULUMI_ACCESS_TOKEN
       
       - name: Set AWS_SESSION_TOKEN if needed
         if: inputs.environment == 'production'
@@ -149,10 +149,10 @@ jobs:
         with:
           export-env: true
         env:
-          PULUMI_ACCESS_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/PULUMI_ACCESS_TOKEN
-          CLOUDFLARE_API_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/CLOUDFLARE_API_TOKEN
+          CLOUDFLARE_API_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/CLOUDFLARE_API_TOKEN
           AWS_ACCESS_KEY_ID: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SECRET_ACCESS_KEY
+          PULUMI_ACCESS_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/PULUMI_ACCESS_TOKEN
       
       - name: Set AWS_SESSION_TOKEN if needed
         if: inputs.environment == 'production'
