--- a/.github/workflows/deploy_app_generic.yml
+++ b/.github/workflows/deploy_app_generic.yml
@@ -1,4 +1,4 @@
-name: Deploy UI Generic
+name: Deploy App Generic
 run-name: Deploy UI to  - ${{ github.event.inputs.environment || 'review' }}
 
 on:
@@ -79,7 +79,7 @@ jobs:
     secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
-      environment: ${{ inputs.environment }}
+      environment: ${{ github.event.inputs.environment }}
 
   push-ui:
     name: Push UI to S3
@@ -88,4 +88,4 @@ jobs:
     secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
-      environment: ${{ inputs.environment }}
+      environment: ${{ github.event.inputs.environment }}
