fix: remove the --ignore-scripts flag

--- a/.github/workflows/sync_to_s3_generic_build_app.yml
+++ b/.github/workflows/sync_to_s3_generic_build_app.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: .
-        run: yarn install --frozen-lockfile --ignore-scripts
+        run: yarn install --frozen-lockfile
 
       - name: Build Application
         working-directory: .
