--- a/.github/workflows/sync_to_s3_generic_build_app.yml
+++ b/.github/workflows/sync_to_s3_generic_build_app.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Build Application
         working-directory: .
         run: |
-          rm -rf ../node_modules/@tendermint
-          rm -rf ../node_modules/did-jwt/node_modules/uint8arrays
+          rm -rf ./node_modules/@tendermint
+          rm -rf ./node_modules/did-jwt/node_modules/uint8arrays
           yarn build:platforms
           yarn build:identity
           yarn build:schemas
