--- a/.github/workflows/sync_to_s3_generic_build_app.yml
+++ b/.github/workflows/sync_to_s3_generic_build_app.yml
@@ -28,10 +28,10 @@ jobs:
         with:
           ref: ${{ inputs.refspec }}
 
-      - name: Set up Node.js, version 22.14.0
+      - name: Set up Node.js, version 20.9.0
         uses: actions/setup-node@v4
         with:
-          node-version: 22.14.0
+          node-version: 20.9.0
           cache: "yarn"
 
       - name: Install 1Password CLI
@@ -51,13 +51,13 @@ jobs:
 
       - name: Install Dependencies
         working-directory: .
-        run: yarn install --frozen-lockfile --ignore-scripts
+        run: yarn install --frozen-lockfile
 
       - name: Build Application
         working-directory: .
         run: |
-          rm -rf ../node_modules/@tendermint
-          rm -rf ../node_modules/did-jwt/node_modules/uint8arrays
+          rm -rf ./node_modules/@tendermint
+          rm -rf ./node_modules/did-jwt/node_modules/uint8arrays
           yarn build:platforms
           yarn build:identity
           yarn build:schemas
