--- a/.github/workflows/sync_to_s3_generic_push_app.yml
+++ b/.github/workflows/sync_to_s3_generic_push_app.yml
@@ -28,6 +28,9 @@ jobs:
           name: passport-app-${{ inputs.environment }}
           path: app/out
 
+      - name: Install 1Password CLI
+        uses: 1password/install-cli-action@v1
+
       - name: Load secret
         id: op-load-secret
         uses: 1password/load-secrets-action@v1
