feat: adding  --ignore-scripts when installing for embed-popup and app in workflows

--- a/.github/workflows/sync_to_s3_generic_build_embed.yml
+++ b/.github/workflows/sync_to_s3_generic_build_embed.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: .
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --ignore-scripts
 
       - name: Build Application
         working-directory: .
