--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           export-env: true
         env:
-          CLOUDFLARE_API_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/CLOUDFLARE_API_TOKEN
+          CLOUDFLARE_API_TOKEN: op://DevOps/github-aws-${{ inputs.environment }}/ci/CLOUDFLARE_API_TOKEN
           AWS_ACCESS_KEY_ID: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SECRET_ACCESS_KEY
           PULUMI_ACCESS_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/PULUMI_ACCESS_TOKEN
