--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "rimraf": "^3.0.2",
     "typescript-eslint": "^8.24.0"
   },
-  "workspaces": [
-    "app",
-    "database-client",
-    "iam",
-    "embed",
-    "identity",
-    "schemas",
-    "types",
-    "platforms",
-    "embed-popup"
-  ],
+  "workspaces": {
+    "packages": [
+      "app",
+      "database-client",
+      "iam",
+      "embed",
+      "identity",
+      "types",
+      "platforms",
+      "embed-popup"
+    ]
+  },
   "scripts": {
     "clean": "lerna run clean",
     "nuke": "yarn clean && rimraf node_modules",
@@ -49,13 +50,12 @@
     "test:app": "yarn workspace @gitcoin/passport-app test",
     "test:identity": "yarn workspace @gitcoin/passport-identity test",
     "prettier": "lerna run prettier",
-    "build": "yarn build:platforms && yarn build:identity && yarn build:schemas && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app && yarn build:embed-popup",
+    "build": "yarn build:platforms && yarn build:identity && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app && yarn build:embed-popup",
     "build:database-client": "yarn workspace @gitcoin/passport-database-client build",
     "build:identity": "yarn workspace @gitcoin/passport-identity build",
     "build:iam": "yarn workspace @gitcoin/passport-iam build",
     "build:app": "yarn workspace @gitcoin/passport-app build",
     "build:platforms": "yarn workspace @gitcoin/passport-platforms build",
-    "build:schemas": "yarn workspace @gitcoin/passport-schemas build",
     "build:embed": "yarn workspace @gitcoin/passport-embed build",
     "build:embed-popup": "yarn workspace @gitcoin/passport-embed-popup build",
     "debug": "concurrently --kill-others \"yarn debug:iam\" \"yarn start:app\" \"yarn debug:db-client\"",
@@ -67,13 +67,12 @@
     "start:ceramic": "yarn workspace @gitcoin/passport-database-client ceramic",
     "prod:start:iam": "yarn workspace @gitcoin/passport-iam prod:start",
     "app": "yarn workspace @gitcoin/passport-app",
-    "schemas": "yarn workspace @gitcoin/passport-schemas",
     "iam": "yarn workspace @gitcoin/passport-iam",
     "identity": "yarn workspace @gitcoin/passport-identity",
     "types": "yarn workspace @gitcoin/passport-types",
-    "prestart": "yarn build:platforms && yarn build:identity && yarn build:schemas && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app",
-    "pretest": "yarn build:schemas && yarn build:identity && yarn build:database-client",
-    "postinstall": "yarn build:platforms && yarn build:identity && yarn build:schemas && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app"
+    "prestart": "yarn build:platforms && yarn build:identity && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app",
+    "pretest": "yarn build:identity && yarn build:database-client",
+    "postinstall": "yarn build:platforms && yarn build:identity && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app"
   },
   "engines": {
     "yarn": ">=1.22.10",
