--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -69,8 +69,13 @@ jobs:
           PULUMI_ACCESS_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/PULUMI_ACCESS_TOKEN
 
       - name: Set AWS_SESSION_TOKEN if needed
+        id: set-aws-session-token
         if: inputs.environment == 'production'
-        run: echo "AWS_SESSION_TOKEN=$(op read op://DeployerVault/github-aws-production/ci/AWS_SESSION_TOKEN)" >> $GITHUB_ENV
+        uses: 1password/load-secrets-action@v1
+        with:
+          export-env: true
+        env:
+          AWS_SESSION_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SESSION_TOKEN
 
       - name: Yarn install
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
