--- a/app/.env-example.env
+++ b/app/.env-example.env
@@ -61,6 +61,7 @@ NEXT_PUBLIC_FF_NEW_TWITTER_STAMPS=on
 NEXT_PUBLIC_FF_CYBERCONNECT_STAMPS=on
 NEXT_PUBLIC_FF_TRUSTALABS_STAMPS=on
 NEXT_PUBLIC_FF_OUTDID_STAMP=on
+NEXT_PUBLIC_FF_CLEAN_HANDS_STAMP=on
 NEXT_PUBLIC_FF_ONCHAIN_ZKSYNC=off
 NEXT_PUBLIC_FF_ONCHAIN_SCROLL=off
 NEXT_PUBLIC_FF_ONCHAIN_SHAPE=off
