feat(infra): adding script to auto sweep collected fees from verifies - WIP

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "test:app": "yarn workspace @gitcoin/passport-app test",
     "test:identity": "yarn workspace @gitcoin/passport-identity test",
     "prettier": "lerna run prettier",
-    "build": "yarn build:platforms && yarn build:identity && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app && yarn build:embed-popup",
+    "build": "yarn build:platforms && yarn build:identity && yarn build:database-client && yarn build:iam && yarn build:embed && yarn build:app && yarn build:embed-popup && yarn build:infra-scripts",
     "build:database-client": "yarn workspace @gitcoin/passport-database-client build",
     "build:identity": "yarn workspace @gitcoin/passport-identity build",
     "build:iam": "yarn workspace @gitcoin/passport-iam build",
@@ -59,6 +59,7 @@
     "build:embed": "yarn workspace @gitcoin/passport-embed build",
     "build:embed-popup": "yarn workspace @gitcoin/passport-embed-popup build",
     "debug": "concurrently --kill-others \"yarn debug:iam\" \"yarn start:app\" \"yarn debug:db-client\" \"docker-compose -f hn-signer/docker-compose.yml up\"",
+    "build:infra-scripts": "cd infra/scripts/verifier_sweep && yarn build",
     "debug:iam": "yarn workspace @gitcoin/passport-iam debug",
     "debug:db-client": "yarn workspace @gitcoin/passport-database-client debug",
     "start": "concurrently --kill-others \"yarn start:iam\" \"yarn start:app\" \"docker-compose -f hn-signer/docker-compose.yml up\"",
