load secrets in lambda at runtime

--- a/infra/scripts/verifier_sweep/package.json
+++ b/infra/scripts/verifier_sweep/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.799.0",
     "viem": "^2.28.1"
   }
 }
