feat: adding api key to requests made to sign protocol

--- a/embed/.env-example.env
+++ b/embed/.env-example.env
@@ -80,3 +80,4 @@ FF_ROTATING_KEYS=on
 
 # Control the % of stamps that we want to attach a human network hash. This shall be a number between 0 and 100.
 # HUMAN_NETWORK_NULLIFIER_PERCENT=
+SIGN_PROTOCOL_API_KEY=sign-api-key
