--- a/embed/package.json
+++ b/embed/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^7.5.0",
     "ioredis": "^5.4.1",
     "luxon": "^2.4.0",
+    "pino": "^9.6.0",
     "rate-limit-redis": "^4.2.0",
     "uuid": "^8.3.2"
   },
