--- a/infra/scripts/verifier_sweep/package.json
+++ b/infra/scripts/verifier_sweep/package.json
@@ -7,6 +7,7 @@
     "prebuild": "yarn install",
     "build": "tsc",
     "dev": "ts-node run.ts",
+    "dev:env": "ts-node run.ts --env",
     "test": "jest"
   },
   "keywords": [],
