--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,7 @@
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
     "@intercom/messenger-js-sdk": "^0.0.13",
-    "@passportxyz/passport-embed": "https://github.com/passportxyz/passport-embed.git#dev-build",
+    "@passportxyz/passport-embed": "https://github.com/passportxyz/passport-embed.git#v0.1.6-rc.3",
     "@popperjs/core": "^2.11.8",
     "@reown/appkit": "=1.5.0",
     "@reown/appkit-adapter-wagmi": "=1.5.0",
