--- a/app/.env-example.env
+++ b/app/.env-example.env
@@ -48,6 +48,7 @@ NEXT_PUBLIC_DATADOG_SERVICE=passport
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=my_gtm_id
 
 #feature flags
+NEXT_PUBLIC_FF_HUMAN_ID_STAMP=on
 NEXT_PUBLIC_FF_MULTI_EVM_SIGNER=on
 NEXT_PUBLIC_FF_COINBASE_STAMP=on
 NEXT_PUBLIC_FF_GUILD_STAMP=off
