--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -77,6 +77,11 @@ jobs:
         env:
           AWS_SESSION_TOKEN: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SESSION_TOKEN
 
+      - name: Build Sweeper Service
+        run: |
+          cd infra/scripts/verifier_sweep
+          yarn install --frozen-lockfile
+          yarn build
       - name: Yarn install
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
       - name: Run pulumi
