feat: use mishtiwasm to facilitate call to signer, fixed error reporting
- Use mishtiwasm to facilitate call to signer in humanNetworkOprf
- Added proper error serialization in loggers for embed and iam packages
- Added docker-compose setup for local HN Signer development
- Updated package.json to include HN Signer in start/debug scripts
- Removed HN_SIGNER_IMPLEMENTATION.md as implementation details are now in code

This change simplifies the integration by using the existing mishtiwasm library's
request_from_signer function, which handles the OPRF signing internally.

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "build:platforms": "yarn workspace @gitcoin/passport-platforms build",
     "build:embed": "yarn workspace @gitcoin/passport-embed build",
     "build:embed-popup": "yarn workspace @gitcoin/passport-embed-popup build",
-    "debug": "concurrently --kill-others \"yarn debug:iam\" \"yarn start:app\" \"yarn debug:db-client\"",
+    "debug": "concurrently --kill-others \"yarn debug:iam\" \"yarn start:app\" \"yarn debug:db-client\" \"docker-compose -f hn-signer/docker-compose.yml up\"",
     "debug:iam": "yarn workspace @gitcoin/passport-iam debug",
     "debug:db-client": "yarn workspace @gitcoin/passport-database-client debug",
-    "start": "concurrently --kill-others \"yarn start:iam\" \"yarn start:app\"",
+    "start": "concurrently --kill-others \"yarn start:iam\" \"yarn start:app\" \"docker-compose -f hn-signer/docker-compose.yml up\"",
     "start:iam": "yarn workspace @gitcoin/passport-iam start",
     "start:app": "yarn workspace @gitcoin/passport-app start",
     "start:ceramic": "yarn workspace @gitcoin/passport-database-client ceramic",
