--- a/infra/scripts/verifier_sweep/package.json
+++ b/infra/scripts/verifier_sweep/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.799.0",
+    "ethers": "^6.13.4",
     "viem": "^2.28.1"
   }
 }
