chore: add zkemail provider and platform structure - no logic

--- a/app/.env-example.env
+++ b/app/.env-example.env
@@ -68,6 +68,7 @@ NEXT_PUBLIC_FF_ONCHAIN_SCROLL=off
 NEXT_PUBLIC_FF_ONCHAIN_SHAPE=off
 NEXT_PUBLIC_FF_ONCHAIN_BASE=off
 NEXT_PUBLIC_FF_CHAIN_SYNC=on
+NEXT_PUBLIC_FF_ZKEMAIL_STAMP=on
 # Should be set to whatever you have set for CERAMIC_CACHE_SCORER_ID=3 in the scorer API - Used for notifications
 NEXT_PUBLIC_CERAMIC_CACHE_SCORER_ID=3
 NEXT_PUBLIC_CERAMIC_CACHE_ENDPOINT=http://localhost:8002/ceramic-cache
