--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next dev -p 3000",
+    "start": "NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next dev -p ${APP_PORT:-3000}",
     "export": "ts-node ./scripts/preBuild.ts && NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next build && next export",
     "build": "tsx ./scripts/preBuild.tsx && NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next build",
     "prod-start": "NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next start",
@@ -37,6 +37,7 @@
     "@popperjs/core": "^2.11.8",
     "@reown/appkit": "=1.5.0",
     "@reown/appkit-adapter-wagmi": "=1.5.0",
+    "@silk-wallet/silk-wallet-sdk": "^0.7.1",
     "@tanstack/react-query": "^5.59.20",
     "broadcast-channel": "^4.11.0",
     "did-session": "^4.0.0",
