feat(app): add dev mode for rapid UI development
Implements a development mode that allows frontend developers to work
on UI without authentication or backend services. Perfect for CSS
iterations and UI development.

Features:
- Mock Service Worker (MSW) intercepts all API calls
- 8 pre-configured user scenarios (empty, basic, power user, etc.)
- Simple scenario switcher dropdown
- No wallet or authentication required
- Instant hot-reload friendly

Usage: NEXT_PUBLIC_DEV_MODE=true yarn dev

This dramatically improves DX by removing the complex authentication
flow during development.

--- a/app/package.json
+++ b/app/package.json
@@ -93,6 +93,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "happy-dom": "^15.11.0",
     "identity-obj-proxy": "^3.0.0",
+    "msw": "^2.10.2",
     "postcss": "^8.4.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-qr-code": "^2.0.7",
@@ -114,5 +115,10 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
     "utf-8-validate": "^6.0.3"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
