--- a/embed-popup/package.json
+++ b/embed-popup/package.json
@@ -10,19 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gitcoin/passport-platforms": "^1.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@gitcoin/passport-platforms": "^1.0.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/rollup-plugin-node-builtins": "^2.1.5 ",
     "@vitejs/plugin-react": "^4.3.4",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "@types/rollup-plugin-node-builtins": "^2.1.5 ",
-    "rollup-plugin-polyfill-node": "^0.13.0",
-    "vite-plugin-node-polyfills": "^0.23.0"
+    "vite-plugin-node-polyfills": "0.22.0"
   }
 }
